[package]
name = "macsmc-charged"
version = "0.1.0"
edition = "2021"
authors = ["Nikolai Vincent Vaags <nikolai@nikolaivincent.net>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
env_logger = "0.10.0"
log = "0.4.17"
